# letter-canonical

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FindPython.mk  Makefile  README.md  bdivfree.f90  biotsavart.f90  canonical.bib  canonical.f90  canonical_comment.lyx  downsample_pert_field.py  draft_field_divB0.py  expl_impl_euler.in  field_can.f90  field_can_base.f90  field_can_cyl.f90  field_can_new.f90  field_divB0.f90  field_divB0.inp  field_test.py  integrator.f90  integrator_base.f90  integrator_euler1.f90  integrator_rk45.f90  interpolate_adapter.f90  letter-canonical.code-workspace  letter_canonical.f90  letter_canonical.in  letter_canonical.lyx  letter_canonical_comment.lyx  magfie.f90  magfie_factory.f90  magfie_stell.f90  magfie_test.f90  magfie_tok.f90  main.f90  midpoint.in  my_little_magfie.f90  my_little_magfie.py  (+20 more)
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_alternative.yml
PLOT/: letter-canonical.code-workspace  plot_bfield.py  plot_coils.py  plot_final_coordinates.py  plot_fvec.py  plot_letter_canonical.py  plot_test_integrator.py  plot_test_integrator_new.py  plot_test_integrator_rz.py  plot_transformation.py  plot_util.py
RUN/: Makefile  benchmark_gorilla.in  expl_impl_euler.in  exportfig.py  field_divB0.inp  field_divB0_rmp.inp  field_divB0_with_perturbations.inp  fig1_dop853_cyl.in  fig1_expl_impl_euler.in  fig1_midpoint.in  fig1_momentum_energy.py  fig1_rk45_can.in  fig1_rk45_cyl.in  fig2_dop853_cyl.in  fig2_expl_impl_euler.in  fig2_islands.py  fig2_midpoint.in  fig2_rk45_can.in  fig2_rk45_cyl.in  fig2_rk45_cyl_1d-9.in  fig3_bananatips.py  fig3_dop853_cyl.in  fig3_expl_impl_euler.in  fig3_midpoint.in  fig3_rk45_can.in  fig3_rk45_cyl.in  letter_canonical.in  letter_canonical_rmp.in  run.sh
SRC/: biotsavart.f90  canonical.f90  field_can.f90  field_can_albert.f90  field_can_base.f90  field_can_cyl.f90  field_can_test.f90  letter_canonical.f90  magfie_cyl.f90  magfie_factory.f90  magfie_test.f90  magfie_tok.f90  main.f90  psi_transform.f90  test.f90  test_biotsavart.f90  test_field_can.f90  test_integrator.f90  test_magfie.f90  test_orbit.f90  test_orbit_sympl.f90  test_util.f90
SRC/callback/: callback.f90  cut_callback.f90
SRC/integrator/: dop853_cyl_integrator.f90  expl_impl_euler_integrator.f90  integrator.f90  integrator_base.f90  integrator_euler1.f90  integrator_midpoint.f90  integrator_rk45.f90  midpoint_integrator.f90  rk45_can_integrator.f90  rk45_cyl_integrator.f90  velo_sub.f90
callback/: callback.f90  callback_base.f90  cut_callback.f90  passing_cut_callback.f90
integrator/: expl_impl_euler_integrator.f90  integrator.f90  integrator_euler0.f90  integrator_euler1.f90  rk45_can_integrator.f90  rk45_cyl_integrator.f90  velo_sub.f90
paper/: canonical.bib  letter_canonical.lyx
stellarator/: Makefile  draft_stellarator.py  main.f90  my_little_magfie.f90  simple_cyl.f90
